# allocator-suite

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: standard_perf.rs  switchable_perf.rs
examples/: switchable.rs
src/: lib.rs  memory_address.rs
src/adaptors/: alloc.rs  alloc_to_allocator_adaptor.rs  allocator_adaptor.rs  global_alloc.rs  global_alloc_to_allocator_adaptor.rs  mod.rs
src/allocators/: allocator.rs  bump_allocator.rs  context_allocator.rs  memory_map_allocator.rs  mod.rs  multiple_binary_search_tree_allocator.rs
src/allocators/binary_search_trees/: binary_search_tree_with_cached_knowledge_of_first_child.rs  binary_search_trees_with_cached_knowledge_of_first_child.rs  mod.rs
src/allocators/bit_set/: absolute_location_in_bit_set.rs  bit_set_allocator.rs  bit_set_word.rs  bit_set_word_pointer.rs  bits_in_a_byte.rs  block_size.rs  mod.rs  number_of_bit_set_words.rs  number_of_bits.rs  number_of_bytes.rs  relative_location_in_bit_set.rs
src/allocators/global/: current_allocator_in_use.rs  global_switchable_allocator.rs  local_allocator.rs  mod.rs  (+4 more)
src/extensions/: layout_hack.rs  logarithm_base2_as_usize.rs  mod.rs  non_null_ext.rs  non_null_pointer.rs  non_null_u8_ext.rs  non_null_u8_node_pointer.rs  non_zero_u32_ext.rs  non_zero_usize.rs  non_zero_usize_ext.rs  pointer_ext.rs  pointer_mut_ext.rs  u64_ext.rs  usize_ext.rs
src/likeliness/: likely.rs  mod.rs  unlikely.rs
src/memory_sources/: memory_source.rs  mod.rs  rc_memory_source.rs
tests/: multiple_binary_search_tree_allocator_tests.rs  switchable_allocator_tests.rs
(+19 files in other folders)
