[package]
name = "allocator-suite"
version = "0.1.7"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
description = "Allocator Suite for various allocation types"
keywords = ["allocator", "memory", "memory-management", "mmap", "numa"]
categories = ["memory-management", "caching"]
homepage = "https://github.com/bastion-rs/allocator-suite"
repository = "https://github.com/bastion-rs/allocator-suite"
documentation = "https://docs.rs/allocator-suite"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
either = "^1.5"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.50"
